--- a/MyFavoritePlaces/app/src/main/res/layout/about.xml
+++ b/MyFavoritePlaces/app/src/main/res/layout/about.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,14 +10,47 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.myfavoriteplaces.myfavoriteplaces.MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:showIn="@layout/activity_main"
+    android:orientation="vertical">
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <ImageButton
-        android:layout_width="250dip"
-        android:layout_height="250dip"
-        android:id="@+id/SavePlaces"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:background="@drawable/about"/>
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#555555"
+                android:textSize="12dp"
+                android:text="Version: 1.0 \nDate : 31/05/16\n"
+                />
 
-</RelativeLayout>
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#555555"
+                android:text="Application développée par :\n
+                                - Henon Emilien,\n
+                                - Laachouri Karim,\n
+                                - Segard Axel.\n"
+                />
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#555555"
+                android:text="MyFavoritePlaces permet à son utilisateur de sauvegarder ses endroits favoris dans une base de données, lui permettant de retrouver facilement ses endroits préférés par type ,lieu et de voir sa description faites par l'utilisateur. \n"
+                />
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#555555"
+                android:text="Cette application a été développé dans le cadre du projet Android a l'IUT du Littoral Côte d'Opale afin de valider les compétences acquises au cours du module."
+                />
+        </LinearLayout>
+    </ScrollView>
+</LinearLayout>
