--- a/MyFavoritePlaces/app/src/main/res/layout/content_main.xml
+++ b/MyFavoritePlaces/app/src/main/res/layout/content_main.xml
@@ -1,48 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.myfavoriteplaces.myfavoriteplaces.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <ImageButton
-        android:layout_width="250dip"
-        android:layout_height="250dip"
-        android:id="@+id/SavePlaces"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:background="@drawable/save_place"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <ImageButton
-        android:layout_width="250dip"
-        android:layout_height="250dip"
-        android:id="@+id/ListPlaces"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:background="@drawable/list_place"/>
+        <ImageButton
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="200dp"
+            android:id="@+id/SavePlaces"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:background="@mipmap/save_places_icon"/>
 
-    <ImageButton
-        android:layout_width="250dip"
-        android:layout_height="250dip"
-        android:id="@+id/About"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:background="@drawable/about"/>
+        <ImageButton
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="200dp"
+            android:id="@+id/ListPlaces"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:background="@mipmap/show_saved_places_icon"/>
 
-    <ImageButton
-        android:layout_width="250dip"
-        android:layout_height="250dip"
-        android:id="@+id/Exit"
-        android:layout_centerVertical="true"
-        android:layout_alignParentRight="true"
-        android:background="@drawable/exit"/>
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-</RelativeLayout>
+        <ImageButton
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="200dp"
+            android:id="@+id/About"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:background="@mipmap/about_icon"/>
+
+        <ImageButton
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="200dp"
+            android:id="@+id/Exit"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:background="@mipmap/turn_off_icon"/>
+
+    </LinearLayout>
+
+</LinearLayout>
