--- a/MyFavoritePlaces/app/src/main/res/layout/save_places.xml
+++ b/MyFavoritePlaces/app/src/main/res/layout/save_places.xml
@@ -64,7 +64,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Adresse"
+            android:text="Adresse (rue + ville)"
             />
 
         <EditText android:id="@+id/AdressePlace"
