--- a/MyFavoritePlaces/app/src/main/res/layout/list_places.xml
+++ b/MyFavoritePlaces/app/src/main/res/layout/list_places.xml
@@ -14,6 +14,7 @@
 
     <ListView android:id="@+id/affichage_listplace"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></ListView>
+        android:layout_height="wrap_content"
+        android:textSize="20px" android:paddingTop="10dip" android:paddingBottom="10dip"></ListView>
 
 </RelativeLayout>
